--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="./components/ApiService.js"></script>
+  <script src="./components/Modal.js"></script>
+  <script defer src="./src/index.js"></script>
   <title>Document</title>
+
 </head>
 <body>
-  
+
+
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>Some text in the Modal.</p>
+    </div>
+  </div>
+
 
   <div id="main"></div>
 </body>
