--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./components/ApiService.js"></script>
   <script src="./components/Modal.js"></script>
+  <link href="./src/style.css" rel="stylesheet" type="text/css">
   <script defer src="./src/index.js"></script>
-  <title>Document</title>
+  <title>Guitar Shop</title>
 
 </head>
 <body>
+  <h1 class="page-header">Guitar Shop</h1>
+  <h2>Buy and Sell guitars</h2>
 
 
-  <div id="myModal" class="modal">
+  <!-- <div id="myModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
       <p>Some text in the Modal.</p>
     </div>
-  </div>
+  </div> -->
 
 
-  <div id="main"></div>
+  <div id="main">Main div here</div>
 </body>
 </html>
