--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./components/ApiService.js"></script>
-  <script src="./components/Modal.js"></script>
+  <script src="./services/ApiService.js"></script>
+  <!-- <script src="./components/Modal.js"></script> -->
+  <script src="./components/Guitar.js"></script>
   <link href="./src/style.css" rel="stylesheet" type="text/css">
   <script defer src="./src/index.js"></script>
   <title>Guitar Shop</title>
