css location is now found in the assets folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="./services/ApiService.js"></script>
   <!-- <script src="./components/Modal.js"></script> -->
   <script src="./components/Guitar.js"></script>
-  <link href="./src/style.css" rel="stylesheet" type="text/css">
+  <link href="./assets/style.css" rel="stylesheet" type="text/css">
   <script defer src="./src/index.js"></script>
   <title>Guitar Shop</title>
 
