--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./services/ApiService.js"></script>
+    <script src="./src/services/ApiService.js"></script>
     <!-- <script src="./components/Modal.js"></script> -->
-    <script src="./components/Guitar.js"></script>
+    <script src="./src/components/Guitar.js"></script>
     <link href="./assets/style.css" rel="stylesheet" type="text/css">
     <script defer src="./src/index.js"></script>
     <title>Guitar Shop</title>
 
   </head>
   <body>
-    <h1 class="page-header">Guitar Shop</h1>
+    <header class="page-header">Guitar Shop
+      <span>
+        <button>Log In</button>
+        <button>Register</button>
+      </span>
+    </header>
     <h2>Buy and Sell guitars</h2>
+    <button>Stay here and don't change</button>
+
 
 
     <!-- <div id="myModal" class="modal">
