add script, class, and modal context

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./src/services/ApiService.js"></script>
-    <!-- <script src="./components/Modal.js"></script> -->
+    <script src="./src/components/Modal.js"></script>
     <script src="./src/components/Guitar.js"></script>
     <link href="./assets/style.css" rel="stylesheet" type="text/css">
     <script defer src="./src/index.js"></script>
@@ -15,7 +15,7 @@
     <header class="page-header">Guitar Shop
       <span>
         <button>Log In</button>
-        <button>Register</button>
+        <button class="sign-up">Register</button>
       </span>
     </header>
     <h2>Buy and Sell guitars</h2>
@@ -23,12 +23,13 @@
 
 
 
-    <!-- <div id="myModal" class="modal">
+    <div id="myModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
         <p>Some text in the Modal.</p>
+        <div id="modal-main">modal main text area</div>
       </div>
-    </div> -->
+    </div>
 
 
     <div id="main">Main div here</div>
