remove button and clean up unused text

--- a/index.html
+++ b/index.html
@@ -19,15 +19,12 @@
       </span>
     </header>
     <h2>Buy and Sell guitars</h2>
-    <button>Stay here and don't change</button>
-
 
 
     <div id="myModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>Some text in the Modal.</p>
-        <div id="modal-main">modal main text area</div>
+        <div id="modal-main"></div>
       </div>
     </div>
 
