rename page title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-    <header class="page-header">Guitar Shop
+    <header class="page-header">Guitar Picks
       <span>
         <button>Log In</button>
         <button class="sign-up">Register</button>
