include User.js script tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="./src/services/ApiService.js"></script>
     <script src="./src/components/Modal.js"></script>
     <script src="./src/components/Guitar.js"></script>
+    <script src="./src/components/User.js"></script>
     <link href="./assets/style.css" rel="stylesheet" type="text/css">
     <script defer src="./src/index.js"></script>
     <title>Guitar Shop</title>
