Change second header line text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="sign-up">Register</button>
       </span>
     </header>
-    <h2>Buy and Sell guitars</h2>
+    <h2>Show off your guitar</h2>
 
 
     <div id="myModal" class="modal">
