--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   <body>
     <header class="page-header">Guitar Picks
       <span>
-        <button>Log In</button>
-        <button class="sign-up">Register</button>
+        <button id="account-button">Account</button>
       </span>
     </header>
-    <h2>Show off your guitar</h2>
+    <h2 id="header-2">Create a username to continue</h2>
 
 
     <div id="myModal" class="modal">
