Change title tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./src/components/User.js"></script>
     <link href="./assets/style.css" rel="stylesheet" type="text/css">
     <script defer src="./src/index.js"></script>
-    <title>Guitar Shop</title>
+    <title>Guitar Picks</title>
 
   </head>
   <body>
